--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "apisauce": "^2.1.6",
     "axios": "^1.3.4",
     "expo": "~47.0.12",
+    "expo-image-picker": "~14.0.2",
     "expo-status-bar": "~1.4.2",
+    "form-data": "^4.0.0",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-safe-area-context": "4.4.1",
