--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "expo-status-bar": "~1.4.2",
     "form-data": "^4.0.0",
     "react": "18.1.0",
+    "react-loading-overlay-ts": "^2.0.1",
     "react-native": "0.70.5",
+    "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "typescript": "^4.6.3"
