--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
+    "react-native-vector-icons": "^9.2.0",
     "typescript": "^4.6.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@types/react-native-vector-icons": "^6.4.13"
   },
   "private": true
 }
